assets/css/style.css
.restDisplay {
    max-height: 150px;
    width: auto;
}

/* MODAL CSS, lione below puts the text Select City on same line as dropdown to select city */
select.form-control {
    display: inline-block;
  }

.form-check-input {
    align-content: center;
    margin: 0 auto;
}

.form-group {
    justify-content: center;
    margin: 0 auto; 
}

.form-control {
    overflow: auto;
}

a:hover {
    text-decoration: none;

}

.main-img {
    display:none;
}

body {
    background-image: url("../../images/background.png")
}

#main-page-jumbo {
    height: 20vh;
    width: 100%;
}

#logged-in-dropdown {
    right: 0; 
    left: auto;
}

.card {
    background-color: rgba(170, 218, 194, 0.45);
}

.navbar {
    background-image: url("../../images/prism.png")
}

#photo-container {
    width: 100vw;
    height: 100vh;
    position: relative;
}

.index-image {
    width: 100%;
    height: 100vh;
}

.header-text {
    z-index: 10;
    color: white;
    font-family: 'Bowlby One SC', cursive;
    font-size: 5rem;
   
}

.in-text {
    position:absolute;
    right: 3vw;
    top: 20vw;
}

.out-text {
    position:absolute;
    left: 3vw;
    top: 20vw;
}

.intro-text {
    position: absolute;
    bottom: 5vw;
    left: 2vw;
    right: vw;
    color: white; 
    font-family: 'Maven Pro', sans-serif;
    font-size: 16pt;
    display:none;
}
.index-image:hover + .intro-text{
    display:block;
}

.header-text:hover + .intro-text{
    display:block;
}

#filter-section {
    background-color: rgba(170, 218, 194);
}

